# dynaplan

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile.backend  Dockerfile.frontend  README.md  ROADMAP.md  claude-progress.txt  cloudbuild.backend.yaml  cloudbuild.frontend.yaml  features.json
.claude/: settings.json
.claude/agents/: code-reviewer.md  security-reviewer.md  test-writer.md
.github/workflows/: backend-tests.yml
backend/: .env.example  alembic.ini  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/app/: main.py
backend/tests/: conftest.py  test_action.py  test_alm.py  test_api_keys.py  test_audit.py  test_auth.py  test_backpressure_journeys.py  test_bulk_ops.py  test_calc_cache.py  test_cell.py  test_chunked_upload.py  test_cloudworks.py  test_cloudworks_connectors.py  test_collaboration.py  test_comment.py  test_composite_dimension.py  test_dashboard.py  test_dashboard_share.py  test_data_hub.py  test_database_infra.py  test_dca.py  test_dependency_graph.py  test_dimension.py  test_dynaplan_cli.py  test_engine_profile.py  test_formula_engine.py  (+32 more)
cli/: README.md  pyproject.toml
cli/dynaplan_cli/: __init__.py  __main__.py  cli.py  client.py
engine/: Cargo.toml
engine/dynaplan-py/: Cargo.toml
engine/dynaplan-py/src/: conversions.rs  lib.rs  model_handle.rs
frontend/: package.json  smoke.test.js
scripts/: browser_touchpoint_matrix.js  deploy_gcp.sh  generate_progress_pdf.py  implement_feature.sh  parallel_implement.sh  run_codex_roadmap.sh  run_silent.sh  seed_apple_fpa_scenario.js  test_all.sh
tmp-play/: smoke.spec.ts
(+420 files in other folders)
